<resources>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_menu_overflow_description">More options</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_activity_chooser_view_see_all">See all</string>
  <string name="abc_activitychooserview_choose_application">Choose an app</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_query">Search query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_shareactionprovider_share_with">Share with</string>
  <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
  <string name="abc_slice_error">Couldn't connect</string>
  <string name="abc_slice_more">More</string>
  <string name="abc_slice_more_content">+ %1$d</string>
  <string name="abc_slice_permission_allow">Allow</string>
  <string name="abc_slice_permission_deny">Deny</string>
  <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
  <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
  <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
  <string name="abc_slice_show_more">Show more</string>
  <string name="abc_slice_updated">Updated %1$s</string>
  <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="ahc_description">Enjoy the best sound quality, optimized for your headphones and your listening preferences.

This feature will analyze the connected headphones and your listening preferences when you play music. The sound experience will be optimized just for you.</string>
  <string name="ahc_feature_name">Automatic headphone optimization</string>
  <string name="ahc_location">This can be changed later in Sound effects settings.</string>
  <string name="ahc_location_variable">This can be changed later in %s</string>
  <string name="ahc_off">Off</string>
  <string name="ahc_on">On</string>
  <string name="ahc_switch_off">OFF</string>
  <string name="ahc_switch_on">ON</string>
  <string name="ahc_title">Always get the best sound</string>
  <string name="ahc_title_accessory_settings">Automatic headphone optimization</string>
  <string name="ahc_title_on_off">Automatic optimization</string>
  <string name="androidx_startup">androidx.startup</string>
  <string name="audio_settings_white_list_instruction_txt">The effect you turned on (either 360 Upmix or DSEE Ultimate) takes priority over Dolby Sound for the media sound of the apps registered here.</string>
  <string name="audio_settings_white_list_no_app_txt">No apps added.
Tap the + button to add apps.</string>
  <string name="audio_settings_white_list_no_apps_to_add_txt">No apps to add</string>
  <string name="audio_settings_white_list_select_app_title_txt">Select app</string>
  <string name="audio_settings_white_list_string_add_icon_txt">Add app</string>
  <string name="audio_settings_white_list_string_btn_add_txt">ADD</string>
  <string name="audio_settings_white_list_string_delete_txt">Remove from list</string>
  <string name="audio_settings_white_list_title_txt">Effect priority</string>
  <string name="call_notification_answer_action">Answer</string>
  <string name="call_notification_answer_video_action">Video</string>
  <string name="call_notification_decline_action">Decline</string>
  <string name="call_notification_hang_up_action">Hang Up</string>
  <string name="call_notification_incoming_text">Incoming call</string>
  <string name="call_notification_ongoing_text">Ongoing call</string>
  <string name="call_notification_screening_text">Screening an incoming call</string>
  <string name="copy">Copy</string>
  <string name="expand_button_title">Advanced</string>
  <string name="gui_continue_txt">Continue</string>
  <string name="not_set">Not set</string>
  <string name="notification_description">Always get the best sound quality, optimized for your ears.</string>
  <string name="notification_header">Improve your headphone sound</string>
  <string name="permission_dialog_button_go_to_app_info_txt">APP INFO</string>
  <string name="permission_dialog_message_1_txt">%s requires the following permission(s)</string>
  <string name="permission_dialog_message_2_txt">The app requires the following permission(s) to perform this action.</string>
  <string name="permission_dialog_message_go_to_settings_txt">To grant permissions, go to App info &gt; Permissions.</string>
  <string name="permission_dialog_title_continue_txt">Could not continue</string>
  <string name="permission_dialog_title_permission_txt">%s permission</string>
  <string name="preference_copied">"%1$s" copied to clipboard.</string>
  <string name="search_menu">Search settings</string>
  <string name="search_menu_title">Search</string>
  <string name="sound_enhance_strings_accessibility_clear_bass_logo_txt">The logo of Clear Bass</string>
  <string name="sound_enhance_strings_accessibility_clear_bass_txt">Slider for Clear Bass setting</string>
  <string name="sound_enhance_strings_accessibility_freq_0_4_txt">Slider for 400 hertz</string>
  <string name="sound_enhance_strings_accessibility_freq_16_txt">Slider for 16 kilohertz</string>
  <string name="sound_enhance_strings_accessibility_freq_1_0_txt">Slider for 1 kilohertz</string>
  <string name="sound_enhance_strings_accessibility_freq_2_5_txt">Slider for 2.5 kilohertz</string>
  <string name="sound_enhance_strings_accessibility_freq_6_3_txt">Slider for 6 kilohertz</string>
  <string name="sound_enhance_strings_accessibility_minus_10_txt">minus ten</string>
  <string name="sound_enhance_strings_accessibility_minus_1_txt">minus one</string>
  <string name="sound_enhance_strings_accessibility_minus_2_txt">minus two</string>
  <string name="sound_enhance_strings_accessibility_minus_3_txt">minus three</string>
  <string name="sound_enhance_strings_accessibility_minus_4_txt">minus four</string>
  <string name="sound_enhance_strings_accessibility_minus_5_txt">minus five</string>
  <string name="sound_enhance_strings_accessibility_minus_6_txt">minus six</string>
  <string name="sound_enhance_strings_accessibility_minus_7_txt">minus seven</string>
  <string name="sound_enhance_strings_accessibility_minus_8_txt">minus eight</string>
  <string name="sound_enhance_strings_accessibility_minus_9_txt">minus nine</string>
  <string name="sound_enhance_strings_accessibility_nc_off_txt">Noise canceling, Off</string>
  <string name="sound_enhance_strings_accessibility_nc_on_always_txt">Noise canceling, Always on</string>
  <string name="sound_enhance_strings_accessibility_nc_on_auto_txt">Noise canceling, Auto</string>
  <string name="sound_enhance_strings_accessibility_nc_on_simple_txt">Noise canceling, on</string>
  <string name="sound_enhance_strings_accessibility_noise_cancel_settings_txt">Advanced noise canceling settings</string>
  <string name="sound_enhance_strings_accessibility_plus_10_txt">plus ten</string>
  <string name="sound_enhance_strings_accessibility_plus_1_txt">plus one</string>
  <string name="sound_enhance_strings_accessibility_plus_2_txt">plus two</string>
  <string name="sound_enhance_strings_accessibility_plus_3_txt">plus three</string>
  <string name="sound_enhance_strings_accessibility_plus_4_txt">plus four</string>
  <string name="sound_enhance_strings_accessibility_plus_5_txt">plus five</string>
  <string name="sound_enhance_strings_accessibility_plus_6_txt">plus six</string>
  <string name="sound_enhance_strings_accessibility_plus_7_txt">plus seven</string>
  <string name="sound_enhance_strings_accessibility_plus_8_txt">plus eight</string>
  <string name="sound_enhance_strings_accessibility_plus_9_txt">plus nine</string>
  <string name="sound_enhance_strings_accessibility_vpt_list_item_txt">%s. In a list. Four items. To select an item, scroll horizontally from the center of the screen.</string>
  <string name="sound_enhance_strings_accessibility_zero_txt">zero</string>
  <string name="sound_enhance_strings_accessory_settings_txt">Accessory settings</string>
  <string name="sound_enhance_strings_advanced_setting_desc_txt">Manually adjust the equalizer or other settings</string>
  <string name="sound_enhance_strings_advanced_setting_title_txt">Advanced settings</string>
  <string name="sound_enhance_strings_ahc_invalid_txt">Automatic optimization is not available if DSEE HX is turned on. To enable this setting, please turn off DSEE HX.</string>
  <string name="sound_enhance_strings_ahc_txt">Automatic optimization</string>
  <string name="sound_enhance_strings_app_name_txt">Audio settings</string>
  <string name="sound_enhance_strings_dolby_atmos_mode_custom_desc_txt">Apply your customized sound settings</string>
  <string name="sound_enhance_strings_dolby_atmos_mode_custom_title_txt">Custom</string>
  <string name="sound_enhance_strings_dolby_atmos_mode_dynamic_desc_txt">Automatically identifies the content and delivers unique sound in each scene </string>
  <string name="sound_enhance_strings_dolby_atmos_mode_dynamic_title_txt">Dynamic</string>
  <string name="sound_enhance_strings_dolby_atmos_mode_movie_desc_txt">Suitable for watching a movie or TV show</string>
  <string name="sound_enhance_strings_dolby_atmos_mode_movie_title_txt">Movie</string>
  <string name="sound_enhance_strings_dolby_atmos_mode_music_desc_txt">Suitable for listening to music</string>
  <string name="sound_enhance_strings_dolby_atmos_mode_music_title_txt">Music</string>
  <string name="sound_enhance_strings_spatial_sound_description_desc_txt">To further upgrade your experience, you can optimize the sound to match your ears via the "Sony | Headphones Connect" app when using Sony certified headphones.</string>
  <string name="sound_enhance_strings_spatial_sound_description_title_txt">Personalization</string>
  <string name="sound_enhance_strings_spatial_sound_info_txt">With Sony's unique sound technology, you can enjoy the spatial and immersive sound with regular stereo sound sources.</string>
  <string name="sound_enhance_strings_spatial_sound_open_certified_web_page_txt">Sony headphones certified with 360 Reality Audio logo</string>
  <string name="sound_enhance_strings_spatial_sound_open_hpc_app_title_txt">Install app and personalize</string>
  <string name="sound_enhance_strings_spatial_sound_open_hpc_web_page_txt">About Headphones Connect</string>
  <string name="sound_enhance_strings_spatial_sound_personalized_desc_txt">After personalization via the 360 Reality Audio Setup menu in the "Sony | Headphones Connect" app, your personal profile will be applied to this Xperia. To return to the preset profile, turn off this setting.</string>
  <string name="sound_enhance_strings_spatial_sound_personalized_title_txt">Personalized</string>
</resources>